# quicksnip

./: .gitignore  AppImageBuilder.yml  README.md  pyproject.toml  quicksnip.py  requirements.txt
.github/workflows/: ci.yml  release.yml
tests/: test_quicksnip.py
