[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "quicksnip"
version = "1.0.1"
description = "A minimal GNOME/Linux paint tool for annotating screenshots"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "PyGObject>=3.42.0",
    "PyCairo>=1.20.0",
]

[project.scripts]
quicksnip = "quicksnip:main"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"quicksnip.py" = ["E402"]

[tool.setuptools]
py-modules = ["quicksnip"]